# ComfyUI-face-shaper

./: .gitignore  CHANGES.md  EAR_REMOVAL_SUMMARY.md  IMPLEMENTATION.md  LICENSE.txt  README.md  SOLUTION.md  Workflow_Face_Shaper_Qwen_Edit_2511.json  __init__.py  face_shaper.py  pyproject.toml  test_comparison.py  test_ear_parsing.py  test_implementation.py  test_iris_comparison.py  test_render.py  test_uniform_scale.py  test_validation.py  validate_changes.py  validate_ear_removal.py  validate_node_structure.py
.github/workflows/: publish.yml
web/js/: faceShaperReset.js
