[project]
name = "ComfyUI-face-shaper"
description = "Shape your unique AI face. A face canvas node for ComfyUI that renders customizable facial structure to 2D images for AI conditioning."
version = "1.0.5"
license = { file = "LICENSE.txt" }
dependencies  = []

[project.urls]
Repository = "https://github.com/EricRorich/ComfyUI-face-shaper"

[tool.comfy]
PublisherId = "rorich"
DisplayName = "Face-Shaper"
Icon = "Images/face-shaper_icon.png"
