[project]
name = "face-shaper"
description = "Shape your unique AI face. A face canvas node for ComfyUI that renders customizable facial structure to 2D images for AI conditioning."
version = "1.0.5"
license = { file = "LICENSE.txt" }
dependencies  = []

[project.urls]
Repository = "https://github.com/EricRorich/ComfyUI-face-shaper"

[tool.comfy]
PublisherId = "rorich"
DisplayName = "Face-Shaper"
Icon = "https://github.com/EricRorich/ComfyUI-face-shaper/blob/main/Images/face-shaper_icon.png"
Banner = "https://raw.githubusercontent.com/username/super-resolution-node/main/banner.png"
