[project]
name = "face-shaper"
description = "Shape your unique AI face. A face canvas node for ComfyUI that renders customizable facial structure to 2D images for AI conditioning."
version = "1.0.12"
license = { file = "LICENSE.txt" }
dependencies  = []

[project.urls]
Repository = "https://github.com/EricRorich/ComfyUI-face-shaper"

[tool.comfy]
PublisherId = "rorich"
DisplayName = "Face-Shaper"
Icon = "https://rorich-ai.com/wp-content/uploads/2026/01/face-shaper_icon.png"
Banner = "https://raw.githubusercontent.com/EricRorich/ComfyUI-face-shaper/refs/heads/main/Images/face-shaper_banner.png"
